# bot

./: docker-compose.yml
docker/: docker-compose.yml
docker/gocqhttp/: Dockerfile  config.yml  device.json
docker/gocqhttp/data/leveldb/: 000205.ldb  LOG  MANIFEST-000209
docker/tenkobot/: .env.prod  bot.py  pyproject.toml  test.json  test.py
docker/tenkobot/src/plugins/aouldynamic/: __init__.py
docker/tenkobot/src/plugins/offensive/: __init__.py
docker/tenkobot/src/plugins/whatanime/: data_source.py
docker/tenkobot/src/plugins/whatimage/: __init__.py
gocqhttp/: config.yml  session.token
gocqhttp/data/leveldb/: LOG
tenkobot/: .env.dev  Dockerfile  test.json  test.py
tenkobot/src/plugins/aouldynamic/: __init__.py
tenkobot/src/plugins/encourage/: __init__.py
tenkobot/src/plugins/repeater/: __init__.py
tenkobot/src/plugins/whatanime/: __init__.py
tenkobot/src/plugins/yellowdate/: __init__.py
